# criterion-cycles-per-byte

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
benches/: fibonacci.rs
src/: lib.rs
