[package]
name = "criterion-cycles-per-byte"
version = "0.1.1"
authors = ["The SiO4 Project Developers"]
edition = "2018"
description = "measure time with CPU cycles for criterion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wainwrightmark/criterion-cycles-per-byte"

[dependencies]
criterion = "0.3.0"
